# pubmed_db

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json  todo.md
.claude/commands/: buscar-autor.md  consulta.md  descargar.md  estadisticas.md  exportar.md  recrear-bd.md  test-descarga.md
.github/workflows/: ci.yml
.stats/: affiliations.json  attr_tables.json  author_names.json  author_position.json  data_completeness.json  identifiers.json  journals.json  productivity.json  scientific_content.json  specialty_detection.json  summary.json  temporal.json
config/: __init__.py  cron.example  db_config.yaml  pubmed_config.yaml  requirements.txt  settings.py  spanish_filters.yaml
docs/: author_deduplication.md  configuration.md  deduplicacion_autores.md  schema.md
schema/: pubmed_xml_elements.md
scripts/: create_attr_tables.sql  create_author_specialties.sql  create_authors_table.sql  create_mesh_snomed_mapping.sql  create_mesh_table.sql  create_specialties_table.sql  create_specialty_mappings.sql  create_tables.sql  cron_update.py  deduplicacion_autores.py  download_pubmed.py  import_mesh_terms.py  populate_author_specialties.py  populate_author_specialties_orcid.sql  populate_authors_norm_specialties.sql  populate_specialty_mappings.py  populate_specialty_synonyms.py  statistics.py  sync_snomed_specialties.py
scripts/sql/: create_attr_tables.sql  create_author_specialties.sql  create_authors_norm_specialties.sql  create_authors_table.sql  create_mesh_snomed_mapping.sql  create_mesh_table.sql  create_specialties_table.sql  create_specialty_mappings.sql  create_tables.sql  populate_author_specialties_orcid.sql  populate_authors_norm_specialties.sql
src/: __init__.py
src/database/: __init__.py  connection.py
src/download/: __init__.py  batch_downloader.py  pubmed_client.py  rate_limiter.py  state_manager.py
tests/: __init__.py
(+24 files in other folders)
